force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <description>Position to be filled</description>
    <label>Position</label>
    <nameField>
        <displayFormat>POS - {00000}</displayFormat>
        <label>Position ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>