force-app/main/default/objects/Position__c/fields/cityofnation__c.field-meta.xml
<CustomField>
    <fullName>cityofnation__c</fullName>
    <label>cityofnation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nation_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lahor</fullName>
            </value>
            <value>
                <fullName>delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>