force-app/main/default/objects/Position__c/fields/Days_Since_Posting__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Posting__c</fullName>
    <description>shows total days since post</description>
    <formula>TODAY()  -   DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>total days from posting</inlineHelpText>
    <label>Days Since Posting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>