force-app/main/default/objects/Position__c/fields/Education_Requri__c.field-meta.xml
<CustomField>
    <fullName>Education_Requri__c</fullName>
    <description>Select requirement</description>
    <inlineHelpText>...............................</inlineHelpText>
    <label>Education Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High school</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Post-doc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>