force-app/main/default/objects/Position__c/fields/HM_FirstName__c.field-meta.xml
<CustomField>
    <fullName>HM_FirstName__c</fullName>
    <formula>Hiring_Manager__r.FirstName</formula>
    <label>HM FirstName</label>
    <type>Text</type>
</CustomField>