force-app/main/default/objects/Position__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>enter your id</description>
    <externalId>true</externalId>
    <inlineHelpText>...........</inlineHelpText>
    <label>Legacy ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>