force-app/main/default/objects/Position__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the location of the position</description>
    <label>location</label>
    <referenceTo>location__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>