force-app/main/default/objects/Position__c/fields/Location_City_State_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_City_State_Country__c</fullName>
    <description>Combine city,state,country</description>
    <formula>location__r.City__c &amp; &apos;,  &apos; &amp; location__r.State_provi__c &amp; &apos; -  &apos; &amp; location__r.country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>show ......................</inlineHelpText>
    <label>Location City/State/Country</label>
    <type>Text</type>
</CustomField>