force-app/main/default/objects/Position__c/fields/Max_Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Max_Job_Application__c</fullName>
    <description>maximum job application for position</description>
    <inlineHelpText>.............................................................</inlineHelpText>
    <label>Max Job Application</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>