force-app/main/default/objects/Position__c/fields/Nation_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Nation_Picklist__c</fullName>
    <label>Nation Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>