force-app/main/default/objects/Position__c/fields/newCountJobApp__c.field-meta.xml
<CustomField>
    <fullName>newCountJobApp__c</fullName>
    <label>newCountJobApp</label>
    <summaryForeignKey>Job_Application__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>