force-app/main/default/objects/Position__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>notification to hiring manager</description>
    <inlineHelpText>................................................</inlineHelpText>
    <label>Notify Hiring Manager of application</label>
    <type>Checkbox</type>
</CustomField>