force-app/main/default/objects/Position__c/fields/Number_of_application__c.field-meta.xml
<CustomField>
    <fullName>Number_of_application__c</fullName>
    <description>hold information of total number of application</description>
    <inlineHelpText>..........................................................................</inlineHelpText>
    <label>Number of Applications</label>
    <summaryForeignKey>Job_Application__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>