force-app/main/default/objects/Position__c/fields/Programming_Language__c.field-meta.xml
<CustomField>
    <fullName>Programming_Language__c</fullName>
    <description>select language</description>
    <inlineHelpText>............................</inlineHelpText>
    <label>Programming Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COBOL</fullName>
            </value>
            <value>
                <fullName>FORTRAN</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>