force-app/main/default/objects/Position__c/fields/Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade__c</fullName>
    <description>select salary grade</description>
    <label>Salary Grade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENG-100</fullName>
            </value>
            <value>
                <fullName>ENG-200</fullName>
            </value>
            <value>
                <fullName>ENG-300</fullName>
            </value>
            <value>
                <fullName>ENG-400</fullName>
            </value>
            <value>
                <fullName>FIN-100</fullName>
            </value>
            <value>
                <fullName>FIN-200</fullName>
            </value>
            <value>
                <fullName>FIN-300</fullName>
            </value>
            <value>
                <fullName>FIN-400</fullName>
            </value>
            <value>
                <fullName>IT-100</fullName>
            </value>
            <value>
                <fullName>IT-200</fullName>
            </value>
            <value>
                <fullName>IT-300</fullName>
            </value>
            <value>
                <fullName>IT-400</fullName>
            </value>
            <value>
                <fullName>SAL-100</fullName>
            </value>
            <value>
                <fullName>SAL-200</fullName>
            </value>
            <value>
                <fullName>SAL-300</fullName>
            </value>
            <value>
                <fullName>SAL-400</fullName>
            </value>
            <value>
                <fullName>SUP-100</fullName>
            </value>
            <value>
                <fullName>SUP-200</fullName>
            </value>
            <value>
                <fullName>SUP-300</fullName>
            </value>
            <value>
                <fullName>SUP-400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>