force-app/main/default/objects/Position__c/fields/Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Sub_status__c</fullName>
    <description>select sub status</description>
    <inlineHelpText>..............................</inlineHelpText>
    <label>Sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filled</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>