force-app/main/default/objects/Position__c/fields/sum_of_position__c.field-meta.xml
<CustomField>
    <fullName>sum_of_position__c</fullName>
    <description>sum of job app field count</description>
    <label>sum of position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>