force-app/main/default/objects/Position__c/fields/Total_Close_Pos__c.field-meta.xml
<CustomField>
    <fullName>Total_Close_Pos__c</fullName>
    <label>Total Close Pos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>