force-app/main/default/objects/Position__c/fields/Total_JA__c.field-meta.xml
<CustomField>
    <fullName>Total_JA__c</fullName>
    <description>total job application for position</description>
    <inlineHelpText>......................................................</inlineHelpText>
    <label>Total JA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>