force-app/main/default/objects/Position__c/validationRules/Required_education.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_education</fullName>
    <active>false</active>
    <description>specific requried education</description>
    <errorConditionFormula>ISPICKVAL( Education_Requri__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Education_Requri__c</errorDisplayField>
    <errorMessage>You must specify an educational requirement for this position</errorMessage>
</ValidationRule>